--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,4 +11,4 @@ License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.1.0), ggplot2,dplyr,knitr,ggthemes,roxygen2,ggthemes
-    
+RoxygenNote: 7.0.2
