added threeway barplot configurations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,3 +8,4 @@ export(missing_values_summary)
 export(summarise_by_group)
 export(tab_to_df)
 export(threeway_barplot_count)
+export(threeway_barplot_percent)
