added barplot code

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: busara
+Package: quickr
 Type: Package
-Title: Busara Automated Data Analytics 
+Title: Steven's Automated Data Analytics 
 Version: 0.1.0
 Date: 2019-09-16
 Author: Steven
